--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -13,9 +13,9 @@
     $("#abc").css('visibility', 'hidden');
     display_remote_conection();
 
-    $("#config").click(function() {
-      window.location.replace("/configuracion");
-    });
+    // $("#config").click(function() {
+    //   window.location.replace("/configuracion");
+    // });
     $("#deposito").click(function() {
       socket.emit('deposito', "Deposito requerido");
     });
@@ -92,15 +92,31 @@
 
     socket.on('volver', function(msg) {
     //  borrar_la_pizarra();
-    $('#pizarra').load("./buffer.html");
+    $('#display').load("./buffer.html");
     });
 
     socket.on('cargar_otro', function(msg) {
     //  borrar_la_pizarra();
-    $('#pizarra').load("./otro.html");
+    $('#display').load("./otro.html");
     });
+/////////////////////////////////////////////////////////////////////
+    // socket.on('buffer', function(msg) {
+    // //  borrar_la_pizarra();
+    // $('#display').load("./buffer.html");
+    // });
+/////////////////////////////////////////////////////////////////////
+  //   $("#config").click(function() {
+  //   socket.emit("config",'config');
+  // });
+  //   socket.on('config', function(msg){
+  //   $('#display').load("./system/configuracion.html");
+  // });
 
-    cargar_pantalla_iniciar_remesa();
+    // socket.on('iniciar_nueva_remesa_paso2', function(msg){
+    //   $('#pizarra').load("./nueva_remesa_paso_2.html");
+    // });
+
+    cargar_pantalla_guardada();
 
     $("#iniciar_remesa").click(function() {
       alert('GENIO');
@@ -287,7 +303,7 @@
     //   }
     // })
     ////////////////////////////////////////////////////
-    function loadFile(filePath) {
+function loadFile(filePath) {
   var result = null;
   var xmlhttp = new XMLHttpRequest();
   xmlhttp.open("GET", filePath, false);
@@ -298,13 +314,16 @@
   return result;
 }
 
-function cargar_pantalla_iniciar_remesa() {
-    $('#pizarra').load("./buffer.html");
+function cargar_pantalla_guardada() {
+  //aqui la meta es que tome el archivo donde se guarda el estado actual de la pagina y se carga la pagina actual en todos los servidores al mismo tiempo,
+  //incluso si la maquina ya esta en otro proceso.
+
+    $('#display').load("./buffer.html");
   //  document.getElementById('pizarra').innerHTML=loadFile('./buffer.txt');
 }
 
     function borrar_la_pizarra() {
-        document.getElementById('pizarra').innerHTML="";
+        document.getElementById('display').innerHTML="";
     }
     function clear_conection() {
       timer3 = setTimeout(function() {
@@ -474,9 +493,9 @@ function cargar_pantalla_iniciar_remesa() {
   }
 </style>
 <body oncontextmenu="return false">
-  <div id="loading" style="display:none">Error:<br />El servidor esta paralizado.</div>
+  <div id="loading" style="display:none"> <br>Error:<br/>El servidor esta paralizado.</div>
   <div id="display">
-    <div class="wrapper">
+    <div class="wrapper" id="pizarra">
       <div class="titulo2">
         <!-- <div class=""><div id="system_running_indicator"><i class="fas fa-satellite-dish "></i></div></div> -->
         <div class="">
@@ -492,7 +511,7 @@ function cargar_pantalla_iniciar_remesa() {
         </div>
         <div class="btn volver" id='config'><i class="far fa-list-alt fa-2x"></i></div>
       </div>
-      <div class="grupo2" id="pizarra">
+      <div class="grupo2" >
         <!-- <i class="far fa-list-alt fa-10x"></i> -->
         <!-- <i class="fas fa-link fa-2x"></i>
               <i class="fab fa-mixcloud fa-2x"></i>
