funciona bien, nuevo entorno todo socket. previo a limpieza general,

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -18,7 +18,7 @@
 
     mandar_orden("lock_cashbox");
     mandar_orden("unlock_cashbox");
-
+    mandar_orden("smart_empty");
 /////////////////////////////////////////////////////////////////////
 function enlace_a(a1) {
   var a1x="#"+a1;
