--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -20,6 +20,11 @@
     mandar_orden("unlock_cashbox");
     mandar_orden("smart_empty");
     mandar_orden("trigger_socket");
+
+    mandar_orden("fer");
+    mandar_orden("connected");
+
+
 /////////////////////////////////////////////////////////////////////
 function enlace_a(a1) {
   var a1x="#"+a1;
