--- a/src/public/css/tambox.css
+++ b/src/public/css/tambox.css
@@ -37,7 +37,9 @@ td{
 li{
   padding:5px;
 }
-
+.display{
+  padding:0;
+}
 .anuncio{
   font-size: 16px;
   font-weight: bold;
@@ -58,19 +60,11 @@ li{
   margin : 0 auto;
 }
 .wrapper2{
-  /* max-width: 800px; */
-  width: auto;
-  /* max-height: 460px; */
-  height: 110vh;
   overflow: hidden;
   position: relative;
   display: grid;
-
-  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
-  /* grid-template-columns:auto-fill, minmax(200px, 1fr); */
-  /* grid-template-rows: auto auto auto; */
   grid-gap: 5px;
-  margin : 0 auto;
+  margin : 0;
 }
 .titulo{
   background-color: rgba(8, 8, 8, 1);
@@ -91,13 +85,11 @@ li{
 .titulo2{
   background-color: rgba(8, 8, 8, 1);
   display: grid;
-  grid-template-columns: 0.3fr 0.3fr 3fr 0.5fr;
+  grid-template-columns: 1fr 1fr 9fr 1fr;
   max-height: 13vh;
   border: 1.5px solid gray;
   padding: 5px;
   border-radius: 10px;
-  grid-column: 1/5;
-
   color: white;
   font-size:20px;
   font-family: Arial, Helvetica, sans-serif;
@@ -139,7 +131,7 @@ li{
 }
 .grupo4{
   grid-column: 1;
-  min-height:100%;
+  min-height:87vh;
   background-image: url("../img/bg_image4.jpg");
   color: white;
   border: 1.5px solid gray;
@@ -147,8 +139,11 @@ li{
   padding: 5px;
   text-align: center;
   display:grid;
-  grid-template-columns: 1fr;
-  grid-template-rows:auto;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows:repeat(4,1fr);
+  grid-gap:5px;
+  justify-items:center;
+  align-items: center;
 }
 .cuadre_diario{
   grid-column: 1/5;
@@ -249,7 +244,7 @@ li{
   text-align: left;
 }
 .grupo{
-  grid-column: 1/5;
+  grid-column: 1;
   min-height:350px;
   /*grid-row: auto; */
   /* min-width: 100%; */
@@ -281,8 +276,6 @@ li{
 }
 .btn{
   border-radius: 12px;
-  /*  */
-  /* rgb(124, 123, 129) */
   background-color:rgba(12, 51, 247, 0.75);
   color:#fff;
   text-decoration: none;
@@ -290,14 +283,35 @@ li{
   padding: 0.9rem 1.3rem;
   /* padding-left: 15px; */
   border: 0;
-  shadow: 0 1px 5px rgba(104,104,104,0.8);
-  box-shadow:0px 2px 4px rgba(104,104,104,0.8);
+  /* shadow: 0 1px 5px rgba(104,104,104,0.8);
+  box-shadow:0px 2px 4px rgba(104,104,104,0.8); */
   align-items: center;
   /* align-self: center; */
   align-content: center;
-  /* height: minmax(100px,300px); */
+  /* height: 15
+  0px;
+  width:150px; */
   font-size: 18px;
 }
+.btn_grupo4{
+  border-radius: 12px;
+  background-color:rgba(12, 51, 247, 0.75);
+  color:#fff;
+  text-decoration: none;
+  text-align: center;
+  padding: 0.9rem 1.3rem;
+  /* padding-left: 15px; */
+  border: 0;
+  /* shadow: 0 1px 5px rgba(104,104,104,0.8);
+  box-shadow:0px 2px 4px rgba(104,104,104,0.8); */
+  align-items: center;
+  /* align-self: center; */
+  align-content: center;
+  height: 150px;
+  width:150px;
+  font-size: 18px;
+}
+
 #titulo_popup{
   font-size:30px;
   color:white;
@@ -500,4 +514,46 @@ li{
   filter: alpha(opacity=60);
   z-index: 5;
   display: none;
+}
+
+@media only screen
+/* para pantalla de raspberry pi */
+and (min-device-width : 799px)
+and (max-device-width : 800px)
+and (-webkit-min-device-pixel-ratio: 1)  {
+  /* .masthead{
+  min-height:45rem;
+  }*/
+  body {
+  background-color: black;
+  }
+  .grupo4{
+    min-height:80vh;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows:repeat(2,1fr);
+  }
+}
+
+@media only screen
+/* para pantalla deihpone */
+and (min-device-width : 375px)
+and (max-device-width : 667px)
+and (orientation : landscape){
+  .grupo4{
+    min-height:40vh;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows:repeat(2,1fr);
+  }
+}
+
+@media only screen
+/* para pantalla deihpone */
+and (min-device-width : 375px)
+and (max-device-width : 667px)
+and (orientation : portrait){
+  .grupo4{
+    min-height:80vh;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows:repeat(2,1fr);
+  }
 }
