--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -135,9 +135,9 @@ function mandar_orden(a2) {
 <body oncontextmenu="return false">
   <div id="loading" style="display:none"> <br>Error:<br/>El servidor esta paralizado.</div>
   <div id="display">
-    <div class="wrapper" id="pizarra">
+    <div class="wrapperx" id="pizarra">
       <!-- ESTO SE LLENA EN LINEA CON LA INFORMACION GUARDADA EN BUFFER.HTML -->
     </div>
   </div>
-
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
