--- a/src/public/css/tambox.css
+++ b/src/public/css/tambox.css
@@ -163,19 +163,20 @@ li{
 
 }
 .remesa_hermes{
-  grid-column: 1/5;
-  min-height:350px;
+  grid-column: 1;
+  min-height:87vh;
+  /* min-height:350px; */
   /*grid-row: auto; */
   /* background-color:  rgba(8, 8, 8, 1); */
   background-image: url("../img/bg_image4.jpg");
   color: white;
   border: 1.5px solid gray;
   border-radius: 15px;
-  padding: 5px;
+  /* padding: 5px; */
   text-align: center;
   display:grid;
-  grid-template-columns: repeat(5, auto);
-  grid-template-rows:repeat(3, auto);
+  grid-template-columns: repeat(1, auto);
+  /* grid-template-rows:repeat(3, auto); */
   grid-gap:1em;
 
 }
@@ -218,10 +219,16 @@ li{
   grid-row:2/4;
   padding: 20px;
 }
+.mensaje_titulo{
+  font-size:28px;
+  font-weight: bold;
+  /* grid-column: 2/4; */
+  padding: 20px;
+}
 .mensaje{
   font-size:28px;
   font-weight: bold;
-  grid-column: 2/4;
+  /* grid-column: 2/4; */
   padding: 20px;
 }
 .mensaje_mediano{
@@ -231,10 +238,13 @@ li{
   text-align: left;
 }
 .mensaje_pequeno{
-  font-size:16px;
+  /* width: 400px; */
+  display: grid;
+  /* font-size:16px; */
   font-weight:normal;
-  grid-column: 2/4;
-  text-align: left;
+  /* grid-column: 2/4; */
+  /* text-align: center; */
+  /* justify-items:center; */
 }
 .mensaje_pequeno_izquierda{
   font-size:16px;
@@ -294,6 +304,7 @@ li{
   font-size: 18px;
 }
 .btn_grupo4{
+  max-width: 50vh;
   border-radius: 12px;
   background-color:rgba(12, 51, 247, 0.75);
   color:#fff;
@@ -555,5 +566,11 @@ and (orientation : portrait){
     min-height:80vh;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows:repeat(2,1fr);
+  }
+  .mensaje_titulo{
+    font-size:14px;
+    font-weight: bold;
+    /* grid-column: 2/4; */
+    padding: 10px;
   }
 }
