--- a/src/public/css/tambox.css
+++ b/src/public/css/tambox.css
@@ -13,6 +13,7 @@ body{
   background-color:black;
   color:rgb(106, 106, 106);
   font-family: Arial, Helvetica, sans-serif;
+  max-height: 100vh;
 }
 
 table {
@@ -51,10 +52,9 @@ li{
   height: auto;
   overflow: hidden;
   position: relative;
-  display: grid;
-
-  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
-  grid-template-columns:auto-fill, minmax(200px, 1fr);
+  /* display: grid; */
+  /* grid-template-columns: 100vh; */
+  /* grid-template-columns:auto-fill, minmax(200px, 1fr); */
   /* grid-template-rows: auto auto auto; */
   grid-gap: 5px;
   margin : 0 auto;
@@ -85,7 +85,7 @@ li{
 .titulo2{
   background-color: rgba(8, 8, 8, 1);
   display: grid;
-  grid-template-columns: 1fr 1fr 9fr 1fr;
+  grid-template-columns: 1fr 1fr 7fr 2fr 1fr;
   max-height: 13vh;
   border: 1.5px solid gray;
   padding: 5px;
@@ -140,7 +140,7 @@ li{
   text-align: center;
   display:grid;
   grid-template-columns: repeat(4,1fr);
-  grid-template-rows:repeat(4,1fr);
+  /* grid-template-rows:repeat(4,1fr); */
   grid-gap:5px;
   justify-items:center;
   align-items: center;
@@ -270,6 +270,50 @@ li{
   grid-gap:1em;
   background-image: url("../img/bg_image4.jpg");
 }
+
+.grupo_full_width{
+  grid-column: 1;
+  min-width:100vh;
+  /*grid-row: auto; */
+  /* min-width: 100%; */
+  background-color:  rgba(8, 8, 8, 1);
+  border: 1.5px solid gray;
+  border-radius: 15px;
+  padding: 5px;
+  text-align: center;
+  display:grid;
+  grid-template-columns:repeat(auto-fill, minmax(200px, 1fr));
+  /* repeat(7, 1fr); */
+  /* grid-template-rows: repeat(2, 1fr); */
+  grid-gap:1em;
+  background-image: url("../img/bg_image4.jpg");
+}
+#machine_sn{
+  font-size: 22px;
+  color: red;
+  font-weight: bold;
+}
+#tebs{
+    font-size: 22px;
+  color: yellow;
+  font-weight: bold;
+}
+
+#given_ip{
+  font-size: 22px;
+  color: yellow;
+  font-weight: bold;
+}
+
+#given_port{
+    font-size: 22px;
+  color: yellow;
+  font-weight: bold;
+
+}
+.inline-p {
+     display: inline;
+}
 .keypad{
   grid-column: span 1;
   text-align: center;
@@ -283,6 +327,13 @@ li{
   /* grid-template-rows: 1fr 1fr 1fr; */
   grid-gap: 1em;
   grid-row-gap: 1em;
+}
+.texto{
+  color:white;
+  grid-column-start: span 1;
+  border-radius: 12px;
+  border: 1.5px solid gray;
+  padding: 20px;
 }
 .btn{
   border-radius: 12px;
@@ -302,6 +353,7 @@ li{
   0px;
   width:150px; */
   font-size: 18px;
+  max-height: 150px;
 }
 .btn_grupo4{
   max-width: 50vh;
@@ -526,6 +578,54 @@ li{
   z-index: 5;
   display: none;
 }
+
+.parent {
+display: grid;
+grid-template-columns: repeat(5, 1fr);
+grid-template-rows: repeat(7, 1fr);
+grid-column-gap: 8px;
+grid-row-gap: 12px;
+min-height:87vh;
+/* min-height:350px; */
+/*grid-row: auto; */
+/* background-color:  rgba(8, 8, 8, 1); */
+background-image: url("../img/bg_image4.jpg");
+color: white;
+border: 1.5px solid gray;
+border-radius: 15px;
+/* padding: 5px; */
+text-align: center;
+}
+
+.div1 { grid-area: 2 / 2 / 4 / 5; }
+.div2 { grid-area: 4 / 2 / 6 / 5; }
+.div3 { grid-area: 6 / 2 / 7 / 3; }
+.div4 { grid-area: 6 / 4 / 7 / 5; }
+
+.smart {
+display: grid;
+grid-template-rows: 0.5fr repeat(8, 1fr);
+grid-template-columns: repeat(9, 1fr);
+grid-column-gap: 8px;
+grid-row-gap: 12px;
+min-height:87vh;
+/* min-height:350px; */
+/*grid-row: auto; */
+/* background-color:  rgba(8, 8, 8, 1); */
+background-image: url("../img/bg_image4.jpg");
+color: white;
+border: 1.5px solid gray;
+border-radius: 15px;
+/* padding: 5px; */
+text-align: center;
+}
+
+.smart_div1 { grid-area: 2 / 4 / 4 / 7; }
+.smart_div2 { grid-area: 4 / 4 / 5 / 7; }
+.smart_div3 { grid-area: 5 / 4 / 6 / 7; }
+.smart_div4 { grid-area: 7 / 4 / 8 / 7; }
+.smart_div5 { grid-area: 8 / 4 / 9 / 5; }
+
 
 @media only screen
 /* para pantalla de raspberry pi */
