--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,40 +5,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scale=1.0,user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="css/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="css/favicon.ico" type="image/x-icon">
   <title>Tambox Machine 1.0</title>
-  <!-- <link rel="shortcut icon" href="/img/favicon-32x32.png" type="image/x-icon"> -->
   <link rel="shortcut icon" href="">
-  <script src="/socket/socket.io.dev.js"></script>
-
-  <script type="text/javascript" src="/jquery/jquery.min.js"></script>
-  <!-- <script type="text/javascript" src="../jquery/jquery.min.js"></script> -->
-
-  <link rel="stylesheet" type="text/css" href="css/tambox.css">
-  <!-- <link rel="stylesheet" type="text/css" href="../css/tambox.css"> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js" type="text/javascript"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script> -->
-
-  <script src="js/Chart.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
   <link href="css/fontawesome/css/all.css" rel="stylesheet" type="text/css">
-  <!-- <link href="..css/fontawesome/css/all.css" rel="stylesheet" type="text/css"> -->
 
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+  <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script> -->
   <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/utils/Draggable.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.js"></script>
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script> -->
   <script src="js/angular-tweebmax-draggable-knob.js"></script>
 
+  <script type="text/javascript" src="/jquery/jquery.min.js"></script>
+  <!-- <script type="text/javascript" src="js/TweenMax.min.js"></script> -->
+  <link rel="stylesheet" type="text/css" href="css/tambox.css">
+  <script src="js/Chart.js"></script>
   <script type="text/javascript">
     var socket = io();
+    // var socketConnection = io.connect();
+    // socketConnection.on('connect', function() {
+    //   const sessionID = socketConnection.socket.sessionid; //
+    // console.log(sessionID);
+    // });
     $(document).ready(function() {
+
       console.log("cargando homesite 2020");
-      socket.on('iniciando', function(msg) {
-        setTimeout(function () {
-          //alert("por resetear");
-          console.log("por resetear");
-        //  window.location.replace("/");
-        }, 5000);
-        });
+      // socket.on('iniciando', function(msg) {
+      //   setTimeout(function () {
+      //     //alert("por resetear");
+      //     console.log("por resetear");
+      //   //  window.location.replace("/");
+      //   }, 5000);
+      //   });
+    //  socket.on('connection', () => {
+        console.log("conectado con servidor");
+        console.log("mi_id:"+ socket.id); // an alphanumeric id...
+    //  });
     });
   </script>
 </head>
